Fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,27 @@
 /********************************
  *  * Geral styles
  *   *********************************/
-* {
-	*   box-sizing: border-box;
-	*     margin: 0;
-	*       padding: 0;
-	*       }
-	*
-	*       body {
-		*         background-color: #f4f5f6;
-		*         }
-		*
-		*         a, a:hover {
-			*           text-decoration: none;
-			*             color: inherit;
-			*             }
-			*
-			*             .fluid-container {
-				*               max-width: 1310px;
-				*                 min-width: 320px;
-				*                   margin: 0 auto;
-				*                   }
-				*
-				*/********************************
-				* Header Top styles
-				*  *********************************/
+* { box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+body {
+	background-color: #f4f5f6;
+}
+, a:hover {
+	text-decoration: none;
+	color: inherit;
+}
+
+.fluid-container {
+	max-width: 1310px;
+	min-width: 320px;
+	margin: 0 auto;
+}
+
+/********************************
+ * Header Top styles
+ *********************************/
 .page-header date {
 	top: 45px;
 	color: #fff;
